Added local azure settings to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 
 # Azure Functions localsettings file
 local.settings.json
+__azurite_db_blob__.json
+__azurite_db_blob_extent__.json
+__azurite_db_queue__.json
+__azurite_db_queue_extent__.json
+__azurite_db_table__.json
 
 # User-specific files
 *.suo
