Rearranged project structure

--- a/CoinDataScheduleTrigger/CoinDataScheduleTrigger.csproj
+++ b/CoinDataScheduleTrigger/CoinDataScheduleTrigger.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <UserSecretsId>08848822-5538-42e7-b7dd-4fb6f129766f</UserSecretsId>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute> 
   </PropertyGroup>
 
   <ItemGroup>
