--- a/CoinDataScheduleTrigger/CoinDataScheduleTrigger.csproj
+++ b/CoinDataScheduleTrigger/CoinDataScheduleTrigger.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
     <PackageReference Include="RestSharp" Version="106.13.0"/>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.23.0"/>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="3.0.10"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
